<resources>
    <string name="app_name">FastFood App</string>

    <string name="main_title">FastFood App</string>
    <string name="main_subtitle">Вкусная еда с доставкой</string>
    <string name="btn_menu">Меню</string>
    <string name="btn_cart">Корзина</string>
    <string name="btn_about">О нас</string>

    <string name="menu_title">Наше меню</string>
    <string name="category_burgers">🍔 Бургеры</string>
    <string name="category_pizza">🍕 Пицца</string>
    <string name="category_drinks">🥤 Напитки</string>

    <string name="item1_name">Классический бургер</string>
    <string name="item1_desc">Сочная котлета, салат, томаты</string>
    <string name="item1_price">299 ₽</string>

    <string name="item2_name">Пепперони</string>
    <string name="item2_desc">Пикантная пепперони, сыр моцарелла</string>
    <string name="item2_price">499 ₽</string>

    <string name="item3_name">Кола</string>
    <string name="item3_desc">Coca-Cola 0.5л</string>
    <string name="item3_price">99 ₽</string>

    <string name="cart_title">Корзина</string>
    <string name="cart_total">Итого:</string>
    <string name="btn_order">Оформить заказ</string>
    <string name="toast_order">Заказ оформлен!</string>
    <string name="toast_added">Добавлено в корзину!</string>
    <string name="btn_add">Добавить</string>

    <string name="login_title">Вход в аккаунт</string>
    <string name="register_title">Регистрация</string>
    <string name="hint_phone">Номер телефона</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_password_confirm">Подтвердите пароль</string>
    <string name="btn_login">Войти</string>
    <string name="btn_register">Зарегистрироваться</string>
    <string name="btn_go_to_register">Нет аккаунта? Зарегистрироваться</string>
    <string name="btn_go_to_login">Есть аккаунт? Войти</string>
    <string name="test_accounts_title">Тестовые аккаунты:</string>
    <string name="btn_logout">Выйти</string>
</resources>